--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"rimraf": "^3.0.2",
 		"rollup": "^2.3.1",
 		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-css-only": "^2.0.0",
-		"rollup-plugin-generate-html-template": "^1.6.1"
+		"rollup-plugin-copy": "^3.3.0",
+		"rollup-plugin-css-only": "^2.0.0"
 	}
 }
