--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
 		"rimraf": "^3.0.2",
 		"rollup": "^2.3.1",
 		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-copy": "^3.3.0",
-		"rollup-plugin-css-only": "^2.0.0"
+		"rollup-plugin-copy": "^3.3.0"
 	}
 }
