--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
 		"@babel/core": "^7.9.0",
 		"@babel/node": "^7.8.7",
 		"@babel/preset-env": "^7.9.0",
-		"@rollup/plugin-node-resolve": "^7.1.1",
 		"eslint": "^6.8.0",
 		"eslint-config-prettier": "^6.10.1",
 		"eslint-plugin-prettier": "^3.1.2",
@@ -46,9 +45,6 @@
 		"jasmine": "^3.5.0",
 		"lint-staged": "^10.1.1",
 		"prettier": "^2.0.2",
-		"rimraf": "^3.0.2",
-		"rollup": "^2.3.1",
-		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-copy": "^3.3.0"
+		"rimraf": "^3.0.2"
 	}
 }
