--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,17 @@
 {
-  "extends": [
-    "plugin:prettier/recommended"
-  ],
+	"parserOptions": {
+		"ecmaVersion": 2017
+	},
 
-  "plugins": ["prettier"],
+	"env": {
+		"es6": true
+	},
 
-  "rules": {
-    "prettier/prettier": "error"
-  }
+	"extends": ["plugin:prettier/recommended"],
+
+	"plugins": ["prettier"],
+
+	"rules": {
+		"prettier/prettier": "error"
+	}
 }
