--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"test": "npx babel-node spec/specRun.js",
 		"clean": "rimraf dist",
-		"build": "npm run clean",
+		"build": "npm run clean && webpack",
 		"lint": "eslint $PWD/'**/*.js'"
 	},
 	"husky": {
@@ -37,13 +37,18 @@
 		"@babel/cli": "^7.8.4",
 		"@babel/core": "^7.9.0",
 		"@babel/node": "^7.8.7",
-		"@babel/preset-env": "^7.9.0",
+		"@babel/preset-env": "^7.9.5",
+		"css-loader": "^3.5.3",
 		"eslint": "^6.8.0",
-		"eslint-config-prettier": "^6.10.1",
-		"eslint-plugin-prettier": "^3.1.2",
-		"husky": "^4.2.3",
-		"lint-staged": "^10.1.1",
-		"prettier": "^2.0.2",
-		"rimraf": "^3.0.2"
+		"eslint-plugin-prettier": "^3.1.3",
+		"eslint-prettier-config": "^1.0.1",
+		"husky": "^4.2.5",
+		"lint-staged": "^10.1.7",
+		"mini-css-extract-plugin": "^0.9.0",
+		"prettier": "^2.0.5",
+		"rimraf": "^3.0.2",
+		"style-loader": "^1.2.0",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.11"
 	}
 }
