--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
 		"eslint": "^6.8.0",
 		"eslint-plugin-prettier": "^3.1.3",
 		"eslint-prettier-config": "^1.0.1",
+		"file-loader": "^6.0.0",
+		"html-replace-webpack-plugin": "^2.5.6",
+		"html-webpack-plugin": "^4.2.0",
 		"husky": "^4.2.5",
 		"lint-staged": "^10.1.7",
 		"mini-css-extract-plugin": "^0.9.0",
