--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "tabWidth": 4,
-  "useTabs": true
+	"semi": true,
+	"singleQuote": true,
+	"tabWidth": 2,
+	"useTabs": true,
+	"printWidth": 80
 }
